templates/service-dns-tcp.yaml
#@ load("@ytt:data", "data")
#@ load("common.lib.yaml", "labels", "selectors")
#@ load("helpers.star", "name")

---
#@ if data.values.serviceDns.mixedService:
apiVersion: v1
kind: Service
metadata:
  name: #@ name(data.values) + "-dns-tcp"
  labels: #@ labels(data.values)
  #@ if data.values.serviceDns.annotations:
  annotations: #@ data.values.serviceDns.annotations
  #@ end
spec:
  type: #@ data.values.serviceDns.type
  #@ if data.values.dualStack.enabled and not data.values.serviceDns.type == "LoadBalancer":
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  #@ end
  #@ if data.values.serviceDns.loadBalancerIP:
  loadBalancerIP: #@ data.values.serviceDns.loadBalancerIP
  #@ end
  #@ if data.values.serviceDns.type == "NodePort" or data.values.serviceDns.type == "LoadBalancer":
  externalTrafficPolicy: #@ data.values.serviceDns.externalTrafficPolicy
  #@ end
  ports:
    - port: #@ data.values.serviceDns.port
      targetPort: dns
      #@ if data.values.serviceDns.nodePort and data.values.serviceDns.type == "NodePort":
      nodePort: #@ data.values.serviceDns.nodePort
      #@ end
      protocol: TCP
      name: dns
    #@ if data.values.monitoring.sidecar.enabled:
    - port: #@ data.values.monitoring.sidecar.port
      targetPort: prometheus
      protocol: TCP
      name: prometheus
    #@ end
  selector: #@ selectors(data.values)
---
#@ if data.values.dualStack.enabled and data.values.serviceDns.type == "LoadBalancer":
apiVersion: v1
kind: Service
metadata:
  name: #@ name(data.values) + "-dns-tcp-ipv6"
  labels: #@ labels(data.values)
  #@ if data.values.serviceDns.annotations:
  annotations: #@ data.values.serviceDns.annotations
  #@ end
spec:
  type: #@ data.values.serviceDns.type
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  #@ if data.values.serviceDns.loadBalancerIPv6:
  loadBalancerIP: #@ data.values.serviceDns.loadBalancerIPv6
  #@ end
  #@ if data.values.serviceDns.type == "NodePort" or data.values.serviceDns.type == "LoadBalancer":
  externalTrafficPolicy: #@ data.values.serviceDns.externalTrafficPolicy
  #@ end
  ports:
    - port: #@ data.values.serviceDns.port
      targetPort: dns
      protocol: TCP
      name: dns
    #@ if data.values.monitoring.sidecar.enabled:
    - port: #@ data.values.monitoring.sidecar.port
      targetPort: prometheus
      protocol: TCP
      name: prometheus
    #@ end
  selector: #@ selectors(data.values)
#@ end
#@ end
